# proteus-core

./: README.md  proteus.bat  proteus.default.ini  proteus.ps1  proteus.sh  pyproject.toml
profiles/basic/: profile.ini
profiles/basic/i18n/en_us/: archetypes.yaml  xslt_templates.yaml
profiles/basic/i18n/es_es/: arquetipos.yaml  xslt_plantillas.yaml
profiles/basic/plugins/verification/: magic.py  (+1 more)
profiles/madeja_ir_english/: profile.ini
proteus/: __init__.py  app.py
proteus/application/resources/: plugins.py
proteus/controller/: command_stack.py
proteus/model/: __init__.py
proteus/model/properties/: __init__.py  code_property.py  property.py  property_factory.py  trace_property.py  unit_property.py
proteus/services/: archetype_service.py
proteus/tests/: fixtures.py
proteus/tests/controller/: test_clone_archetype_document.py
proteus/tests/end2end/: test_config_dialog.py  test_create_document.py  test_create_project.py  test_delete_document.py  test_export_dialog.py  test_open_project.py
proteus/tests/model/: test_object.py  test_project.py
proteus/tests/services/: test_archetype_service.py
proteus/views/components/: main_menu.py  views_container.py
proteus/views/forms/: code_edit.py  measurement_edit.py
resources/i18n/en_us/: components.yaml  dialogs.yaml  general.yaml
resources/i18n/es_es/: componentes.yaml  dialogos.yaml  general.yaml
resources/plugins/basic/: __init__.py
resources/plugins/basics/: __init__.py
resources/plugins/madeja/: __init__.py
resources/xsd/: proteus-object.xsd  proteus-project.xsd  proteus-properties.xsd
(+127 files in other folders)
